--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 # MySQL
-spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/ponto_eletronico?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-
+spring.jpa.open-in-view=true
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
+
+#spring.flyway.enabled=true
+#spring.flyway.locations=classpath:db/migration
+#spring.flyway.check-location=true
+#
+
