--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!--  Hibernate validator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
